[gd_scene load_steps=13 format=2]

[ext_resource path="res://Scripts/GameplayScreens/MainScreen.gd" type="Script" id=1]
[ext_resource path="res://Scenes/Player/Player.tscn" type="PackedScene" id=2]
[ext_resource path="res://Fonts/CommanderGreenFont60.tres" type="DynamicFont" id=3]
[ext_resource path="res://Particles/Stars.tres" type="Material" id=4]
[ext_resource path="res://Scenes/Buttons/ReturnButton.tscn" type="PackedScene" id=6]
[ext_resource path="res://Sounds/MainMusic.wav" type="AudioStream" id=8]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.0823529, 0.0823529, 0.0823529, 0.784314 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.0823529, 0.0823529, 0.0823529, 0.784314 )

[sub_resource type="DynamicFontData" id=3]
font_path = "res://Fonts/8-bit-pusab.ttf"

[sub_resource type="DynamicFont" id=4]
size = 40
font_data = SubResource( 3 )

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0.0823529, 0.0823529, 0.0823529, 0.784314 )

[sub_resource type="DynamicFont" id=6]
size = 40
font_data = SubResource( 3 )

[node name="Main" type="Node2D"]
script = ExtResource( 1 )

[node name="Player" parent="." instance=ExtResource( 2 )]
position = Vector2( 521.395, 525.094 )

[node name="Stars" type="Particles2D" parent="."]
position = Vector2( 2159.93, 508.121 )
z_index = -99
amount = 100
lifetime = 6.0
preprocess = 10.0
visibility_rect = Rect2( -2552.27, -698.654, 2553.03, 1397.18 )
process_material = ExtResource( 4 )
__meta__ = {
"_edit_lock_": true
}

[node name="SpawnTimer" type="Timer" parent="."]

[node name="PowerUpTimer" type="Timer" parent="."]
wait_time = 20.0

[node name="ScoreLabel" type="Label" parent="."]
margin_right = 794.0
margin_bottom = 119.0
rect_pivot_offset = Vector2( 358.693, 0 )
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 0.235294, 0.521569, 0.188235, 1 )
text = "SCORE:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LivesLabel" type="Label" parent="."]
margin_top = 973.713
margin_right = 622.0
margin_bottom = 1092.71
rect_pivot_offset = Vector2( 358.693, 0 )
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 0.235294, 0.521569, 0.188235, 1 )
text = "LIVES:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="EndScore" type="Popup" parent="."]
pause_mode = 2
margin_left = 500.0
margin_top = 100.0
margin_right = 1420.0
margin_bottom = 980.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScoreMenu" type="VBoxContainer" parent="EndScore"]
margin_right = 920.0
margin_bottom = 880.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GameOverLabel" type="Label" parent="EndScore/ScoreMenu"]
margin_right = 920.0
margin_bottom = 223.0
custom_styles/normal = SubResource( 1 )
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 0.235294, 0.521569, 0.188235, 1 )
custom_colors/font_color_shadow = Color( 0.2, 0.419608, 0.160784, 1 )
custom_constants/shadow_offset_y = -8
text = "GAME OVER
You Died!"
align = 1

[node name="ScoreSection" type="VBoxContainer" parent="EndScore/ScoreMenu"]
margin_top = 227.0
margin_right = 920.0
margin_bottom = 880.0
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 1

[node name="ScoreCalcLabel" type="Label" parent="EndScore/ScoreMenu/ScoreSection"]
margin_top = 68.0
margin_right = 920.0
margin_bottom = 296.0
custom_styles/normal = SubResource( 2 )
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 0.235294, 0.521569, 0.188235, 1 )
text = "Destruction:
Accuracy:
Difficulty:"

[node name="SeperatorLine" type="ColorRect" parent="EndScore/ScoreMenu/ScoreSection"]
margin_top = 300.0
margin_right = 920.0
margin_bottom = 310.0
rect_min_size = Vector2( 920, 10 )
color = Color( 0.235294, 0.521569, 0.188235, 1 )

[node name="ScoreFinalLabel" type="Label" parent="EndScore/ScoreMenu/ScoreSection"]
margin_top = 314.0
margin_right = 920.0
margin_bottom = 388.0
custom_styles/normal = SubResource( 5 )
custom_fonts/font = SubResource( 6 )
custom_colors/font_color = Color( 0.235294, 0.521569, 0.188235, 1 )
text = "Total Score:"

[node name="SeperatorLine2" type="ColorRect" parent="EndScore/ScoreMenu/ScoreSection"]
margin_top = 392.0
margin_right = 920.0
margin_bottom = 402.0
rect_min_size = Vector2( 920, 10 )
color = Color( 0.235294, 0.521569, 0.188235, 1 )

[node name="HighScoreLabel" type="Label" parent="EndScore/ScoreMenu/ScoreSection"]
margin_top = 406.0
margin_right = 920.0
margin_bottom = 480.0
custom_styles/normal = SubResource( 5 )
custom_fonts/font = SubResource( 6 )
custom_colors/font_color = Color( 0.235294, 0.521569, 0.188235, 1 )
text = "High Score:"

[node name="ReturnButton" parent="EndScore/ScoreMenu/ScoreSection" instance=ExtResource( 6 )]
margin_top = 484.0
margin_right = 920.0
margin_bottom = 584.0

[node name="MainMusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )
volume_db = -10.0
